Annee_1/Semestre_6/Technologie_Objet/TP/.svn/pristine/7d/7d8fd5c372589ae2438077946d26ce58f7db5e89.svn-base
allumettes/Jouer.java:95: error: cannot find symbol
	private static StrategieAbstraite getStrategy(String choix, String nom) {
	               ^
  symbol:   class StrategieAbstraite
  location: class Jouer
./allumettes/Joueur.java:11: error: cannot find symbol
	private StrategieAbstraite strategie;
	        ^
  symbol:   class StrategieAbstraite
  location: class Joueur
./allumettes/Joueur.java:17: error: cannot find symbol
	public Joueur(String name, StrategieAbstraite strategy) {
	                           ^
  symbol:   class StrategieAbstraite
  location: class Joueur
./allumettes/RapideStrategie.java:4: error: cannot find symbol
public class RapideStrategie extends StrategieAbstraite {
                                     ^
  symbol: class StrategieAbstraite
allumettes/Jouer.java:89: error: cannot find symbol
		StrategieAbstraite.addStrategy(new RapideStrategie());
		^
  symbol:   variable StrategieAbstraite
  location: class Jouer
./allumettes/NaifStrategie.java:5: error: cannot find symbol
public class NaifStrategie extends StrategieAbstraite {
                                   ^
  symbol: class StrategieAbstraite
allumettes/Jouer.java:90: error: cannot find symbol
		StrategieAbstraite.addStrategy(new NaifStrategie());
		^
  symbol:   variable StrategieAbstraite
  location: class Jouer
./allumettes/ExpertStrategie.java:3: error: cannot find symbol
public class ExpertStrategie extends StrategieAbstraite {
                                     ^
  symbol: class StrategieAbstraite
allumettes/Jouer.java:91: error: cannot find symbol
		StrategieAbstraite.addStrategy(new ExpertStrategie());
		^
  symbol:   variable StrategieAbstraite
  location: class Jouer
./allumettes/TricheurStrategie.java:3: error: cannot find symbol
public class TricheurStrategie extends StrategieAbstraite {
                                       ^
  symbol: class StrategieAbstraite
allumettes/Jouer.java:92: error: cannot find symbol
		StrategieAbstraite.addStrategy(new TricheurStrategie());	
		^
  symbol:   variable StrategieAbstraite
  location: class Jouer
./allumettes/HumainStrategie.java:6: error: cannot find symbol
public class HumainStrategie extends StrategieAbstraite {
                                     ^
  symbol: class StrategieAbstraite
allumettes/Jouer.java:98: error: cannot find symbol
				StrategieAbstraite.addStrategy(new HumainStrategie(nom));
				^
  symbol:   variable StrategieAbstraite
  location: class Jouer
allumettes/Jouer.java:101: error: cannot find symbol
				return StrategieAbstraite.getStrategy(choix, nom);
				       ^
  symbol:   variable StrategieAbstraite
  location: class Jouer
./allumettes/RapideStrategie.java:6: error: method does not override or implement a method from a supertype
	@Override
	^
./allumettes/RapideStrategie.java:19: error: method does not override or implement a method from a supertype
	@Override
	^
./allumettes/NaifStrategie.java:13: error: method does not override or implement a method from a supertype
	@Override
	^
./allumettes/NaifStrategie.java:22: error: method does not override or implement a method from a supertype
	@Override
	^
./allumettes/ExpertStrategie.java:5: error: method does not override or implement a method from a supertype
	@Override
	^
./allumettes/ExpertStrategie.java:19: error: method does not override or implement a method from a supertype
	@Override
	^
./allumettes/TricheurStrategie.java:5: error: method does not override or implement a method from a supertype
	@Override
	^
./allumettes/TricheurStrategie.java:29: error: method does not override or implement a method from a supertype
	@Override
	^
./allumettes/HumainStrategie.java:15: error: method does not override or implement a method from a supertype
	@Override
	^
./allumettes/HumainStrategie.java:52: error: method does not override or implement a method from a supertype
	@Override
	^
24 errors
